force-app/main/default/objects/R360_Persona__mdt/R360_Persona__mdt.object-meta.xml
<CustomObject><label>Resource 360 Persona</label><pluralLabel>Resource 360 Personas</pluralLabel><visibility>Public</visibility></CustomObject>