force-app/main/default/objects/R360_Persona__mdt/fields/Approved_On__c.field-meta.xml
<CustomField><fullName>Approved_On__c</fullName><fieldManageability>DeveloperControlled</fieldManageability><label>Approved On</label><type>Date</type></CustomField>