force-app/main/default/objects/R360_Persona__mdt/fields/Business_Role__c.field-meta.xml
<CustomField><fullName>Business_Role__c</fullName><fieldManageability>DeveloperControlled</fieldManageability><label>Business Role</label><length>100</length><type>Text</type></CustomField>