force-app/main/default/objects/R360_Persona__mdt/fields/Control_Owner__c.field-meta.xml
<CustomField><fullName>Control_Owner__c</fullName><fieldManageability>DeveloperControlled</fieldManageability><label>Control Owner</label><length>120</length><type>Text</type></CustomField>