force-app/main/default/objects/R360_Persona__mdt/fields/Decision_Authority__c.field-meta.xml
<CustomField><fullName>Decision_Authority__c</fullName><fieldManageability>DeveloperControlled</fieldManageability><label>Decision Authority</label><length>255</length><type>Text</type></CustomField>