force-app/main/default/objects/R360_Persona__mdt/fields/Delegation_Allowed__c.field-meta.xml
<CustomField><fullName>Delegation_Allowed__c</fullName><defaultValue>false</defaultValue><fieldManageability>DeveloperControlled</fieldManageability><label>Delegation Allowed</label><type>Checkbox</type></CustomField>