force-app/main/default/objects/R360_Persona__mdt/fields/Entra_Group_Alias__c.field-meta.xml
<CustomField><fullName>Entra_Group_Alias__c</fullName><fieldManageability>DeveloperControlled</fieldManageability><label>Entra Group Alias</label><length>120</length><type>Text</type></CustomField>