force-app/main/default/objects/R360_Persona__mdt/fields/License_Assumption__c.field-meta.xml
<CustomField><fullName>License_Assumption__c</fullName><fieldManageability>DeveloperControlled</fieldManageability><label>License Assumption</label><length>80</length><type>Text</type></CustomField>