force-app/main/default/objects/R360_Persona__mdt/fields/Permission_Set_Group__c.field-meta.xml
<CustomField><fullName>Permission_Set_Group__c</fullName><fieldManageability>DeveloperControlled</fieldManageability><label>Permission Set Group</label><length>120</length><type>Text</type></CustomField>