force-app/main/default/objects/R360_Persona__mdt/fields/Scope_Type__c.field-meta.xml
<CustomField><fullName>Scope_Type__c</fullName><fieldManageability>DeveloperControlled</fieldManageability><label>Scope Type</label><length>80</length><type>Text</type></CustomField>