force-app/main/default/objects/R360_Persona__mdt/fields/Segregation_Class__c.field-meta.xml
<CustomField><fullName>Segregation_Class__c</fullName><fieldManageability>DeveloperControlled</fieldManageability><label>Segregation Class</label><length>80</length><type>Text</type></CustomField>